--- a/style.css
+++ b/style.css
@@ -26,6 +26,18 @@
     padding-left: 4px;
 }
 
+.loading-screen::after {
+    content: "";
+    position: absolute;
+    background: url("./img/succes.png") no-repeat;
+}
+
+.loading-screen::before {
+    content: "";
+    position: absolute;
+    background: url("./img/fireworks.gif") no-repeat;
+}
+
 .loading-dots {
     background: url("./img/loading-dots.gif") no-repeat center center/cover;
     width: 25px;
@@ -56,7 +68,7 @@ body {
     transition: 1s ease-in-out filter;
 }
 
-.title-bar {
+.title-bar, .highscores h3 {
     border: 3px ridge #555;
     border-radius: 5px;
     position: absolute;
@@ -360,19 +372,55 @@ body {
 } 
 
 .highscores {
-    top: 16%;
-    height: 342px;
+    top: 13%;
+    height: 370px;
+    width: 250px;
+    left: calc(50% - 125px);
+    background: url("./img/background.jpg");
+    border-radius: 5px;
+    padding: 1.5rem;
+    padding-top: 2.2rem;
+    transform: scale(0) translateY(40px) translateX(50px);
+    transform-origin: 80% 100%;
+    z-index: 5;
 }
 
 .highscores h3 {
-    margin-top: 1rem;
-    font-size: 1.5rem;
+    font-weight: 400;
+    padding: .8rem;
 }
 
 .highscore-container {
     display: flex;
     justify-content: center;
-    margin: .5rem;
+    margin: 0 auto;
+    margin-bottom: .3rem;
+}
+
+.highscore-container h4:first-child {
+    margin-right: 1rem;
+    width: 30%;
+}
+
+.highscore-container h4:last-child {
+    margin-left: 1rem;
+    width: 70%;
+}
+
+.highscore-container:nth-child(2) {
+    color: #FFD700;
+}
+
+.highscore-container:nth-child(3) {
+    color: #C0C0C0;
+}
+
+.highscore-container:nth-child(4) {
+    color: #cd7f32;
+}
+
+.highscore-container span {
+    margin-top: 4px;
 }
 
 .final-score h3 {
